--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>NCSISTEMAS SU LDA</title>
+    <title>NC SISTEMAS</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -71,7 +71,7 @@
         <div class="container">
             <nav class="navbar navbar-dark navbar-expand-lg py-0 items-center">
                 <a href="index.html" class="navbar-brand">
-                    <h6 class="text-white fw-bold d-block">NCSISTEMAS SU LDA</h6>
+                    <h6 class="text-white fw-bold d-block">NC SISTEMAS</h6>
                 </a>
                 <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse">
@@ -187,7 +187,7 @@
                 <div class="col-lg-3 wow fadeIn" data-wow-delay=".5s">
                     <div class="d-flex counter">
                         <h1 class="me-3 text-primary counter-value">120</h1>
-                        <h5 class="text-white mt-1">Total de clientes que amam a NCSISTEMAS SU LDA</h5>
+                        <h5 class="text-white mt-1">Total de clientes que amam a NC SISTEMAS</h5>
                     </div>
                 </div>
                 <div class="col-lg-3 wow fadeIn" data-wow-delay=".7s">
@@ -216,7 +216,7 @@
                 </div>
                 <div class="col-lg-7 col-md-6 col-sm-12 wow fadeIn" data-wow-delay=".5s">
                     <h5 class="text-primary">Sobre Nós</h5>
-                    <h1 class="mb-4">Sobre a NCSISTEMAS SU LDA e Suas Soluções Inovadoras em TI</h1>
+                    <h1 class="mb-4">Sobre a NC SISTEMASe Suas Soluções Inovadoras em TI</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur quis purus ut interdum.
                         Pellentesque aliquam dolor eget urna ultricies tincidunt. Nam volutpat libero sit amet leo
                         cursus, ac viverra eros tristique. Morbi quis quam mi. Cras vel gravida eros. Proin scelerisque
@@ -553,11 +553,11 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <a href="index.html">
-                        <h1 class="text-white fw-bold d-block">NCSISTEMAS SU LDA</h1>
+                        <h1 class="text-white fw-bold d-block">NC SISTEMAS</h1>
                     </a>
                     <p class="mt-4 text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta facere
                         delectus qui placeat inventore consectetur repellendus optio debitis.</p>
-                    <div class="d-flex NCSISTEMAS SU LDA-link">
+                    <div class="d-flex NC SISTEMAS-link">
                         <a href="" class="btn-light nav-fill btn btn-square rounded-circle me-2"><i
                                 class="fab fa-facebook-f text-primary"></i></a>
                         <a href="" class="btn-light nav-fill btn btn-square rounded-circle me-2"><i
