ajusta nas logo e informações da empresa

--- a/index.html
+++ b/index.html
@@ -5,11 +5,32 @@
     <meta charset="utf-8">
     <title>NC SISTEMAS</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="NCSISTEMAS, Transformação Digital, Angola, TI, Tecnologia, Software" name="keywords">
+
+    <meta name="description"
+        content="NCSISTEMAS oferece soluções inovadoras em tecnologia, promovendo transformação digital e resultados inspiradores para o seu negócio.">
+    <!-- Meta palavras-chave (menos relevante hoje, mas ainda pode ser usado) -->
+    <meta name="keywords"
+        content="NCSISTEMAS, soluções tecnológicas, transformação digital, sistemas empresariais, inovação, resultados inspiradores">
+
+    <!-- Meta autor -->
+    <meta name="author" content="NCSISTEMAS">
+
     <meta
         content="NCSISTEMAS é uma empresa angolana de referência no sector de Tecnologias de Informação (TI) e Transformação Digital, com mais de 10 anos de experiência."
         name="description">
+    <meta property="og:title" content="NCSISTEMAS – Soluções que transformam, resultados que inspiram">
+    <meta property="og:description"
+        content="Soluções tecnológicas inovadoras para transformar seu negócio e inspirar resultados.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.ncsistemas.it.ao/">
+    <meta property="og:image" content="https://www.ncsistemas.it.ao/imagem-de-destaque.jpg">
 
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="NCSISTEMAS – Soluções que transformam, resultados que inspiram">
+    <meta name="twitter:description"
+        content="Descubra soluções tecnológicas que transformam negócios e inspiram resultados com a NCSISTEMAS.">
+    <meta name="twitter:image" content="https://www.ncsistemas.it.ao/imagem-de-destaque.jpg">
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
