ajusta nas logo e informações da empresa

--- a/index.html
+++ b/index.html
@@ -295,8 +295,7 @@
                             <h6 class="text-secondary h4 animated fadeInUp">Melhores Soluções em TI</h6>
                             <h1 class="text-white display-1 mb-4 animated fadeInLeft">Serviços Digitais de Qualidade que
                                 Você Realmente Precisa!</h1>
-                            <p class="mb-4 text-white fs-5 animated fadeInDown">Soluções que transformam, resultados que
-                                inspiram. Descubra como podemos ajudar a sua empresa a crescer.</p>
+                            <p class="mb-4 text-white fs-5 animated fadeInDown">NCSISTEMAS – Soluções que transformam, resultados que inspiram!</p>
                             <a href="#service" class="me-2"><button type="button"
                                     class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Nossos
                                     Serviços</button></a>
