--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <title>NC SISTEMAS</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <link rel="icon" href="img/faveIcon.png" type="image/png">
+    <meta name="google-site-verification" content="vfnrg2vyv0O2zGI-VNtDM4sBmDan_xQxaIIGgi8y4M0" />
 
     <meta name="description"
         content="NCSISTEMAS oferece soluções inovadoras em tecnologia, promovendo transformação digital e resultados inspiradores para o seu negócio.">
@@ -23,7 +25,7 @@
         content="Soluções tecnológicas inovadoras para transformar seu negócio e inspirar resultados.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.ncsistemas.it.ao/">
-    <meta property="og:image" content="https://www.ncsistemas.it.ao/imagem-de-destaque.jpg">
+
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
@@ -31,9 +33,7 @@
     <meta name="twitter:description"
         content="Descubra soluções tecnológicas que transformam negócios e inspiram resultados com a NCSISTEMAS.">
     <meta name="twitter:image" content="https://www.ncsistemas.it.ao/imagem-de-destaque.jpg">
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Saira:wght@500;600;700&display=swap"
         rel="stylesheet">
@@ -182,6 +182,17 @@
             }
         }
     </style>
+    <!-- Google tag (gtag.js) -->
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W4PJZ8CBBR"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-W4PJZ8CBBR');
+    </script>
 </head>
 
 <body>
@@ -295,7 +306,8 @@
                             <h6 class="text-secondary h4 animated fadeInUp">Melhores Soluções em TI</h6>
                             <h1 class="text-white display-1 mb-4 animated fadeInLeft">Serviços Digitais de Qualidade que
                                 Você Realmente Precisa!</h1>
-                            <p class="mb-4 text-white fs-5 animated fadeInDown">NCSISTEMAS – Soluções que transformam, resultados que inspiram!</p>
+                            <p class="mb-4 text-white fs-5 animated fadeInDown">NCSISTEMAS – Soluções que transformam,
+                                resultados que inspiram!</p>
                             <a href="#service" class="me-2"><button type="button"
                                     class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Nossos
                                     Serviços</button></a>
@@ -330,14 +342,14 @@
                 </div>
                 <div class="col-lg-3 wow fadeIn" data-wow-delay=".3s">
                     <div class="d-flex counter">
-                        <h1 class="me-3 text-primary counter-value">99</h1>
+                        <h1 class="me-3 text-primary counter-value">54</h1>
                         <h5 class="text-white mt-1">Projetos de sucesso concluídos</h5>
                     </div>
                 </div>
                 <div class="col-lg-3 wow fadeIn" data-wow-delay=".5s">
                     <div class="d-flex counter">
-                        <h1 class="me-3 text-primary counter-value">120</h1>
-                        <h5 class="text-white mt-1">Clientes satisfeitos em Angola</h5>
+                        <h1 class="me-3 text-primary counter-value">29</h1>
+                        <h5 class="text-white mt-1">Clientes satisfeitos</h5>
                     </div>
                 </div>
                 <div class="col-lg-3 wow fadeIn" data-wow-delay=".7s">
@@ -805,10 +817,10 @@
             const clientImages = [
                 { src: 'img/imgEmpe.png', alt: 'Logo Cliente 1' },
                 { src: 'img/empresa_2.jpg', alt: 'Logo Cliente 2' },
-                { src: 'img/imgEmpe.png', alt: 'Logo Cliente 3' },
+                { src: 'img/imaga3.png', alt: 'Logo Cliente 3' },
                 { src: 'img/empresa_2.jpg', alt: 'Logo Cliente 4' },
                 { src: 'img/imgEmpe.png', alt: 'Logo Cliente 5' },
-                { src: 'img/empresa_2.jpg', alt: 'Logo Cliente 6' }
+                { src: 'img/imaga3.png', alt: 'Logo Cliente 6' }
             ];
 
             // Preencher o carrossel com as imagens
