--- a/index.html
+++ b/index.html
@@ -33,10 +33,16 @@
     <meta name="twitter:description"
         content="Descubra soluções tecnológicas que transformam negócios e inspiram resultados com a NCSISTEMAS.">
     <meta name="twitter:image" content="https://www.ncsistemas.it.ao/imagem-de-destaque.jpg">
-  
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0">
+    <script src="script.js" defer></script>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Saira:wght@500;600;700&display=swap"
         rel="stylesheet">
+
+    <link rel="stylesheet" href="css/chatboot.css">
 
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -449,23 +455,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".7s">
-                    <div class="services-item bg-white rounded shadow-sm">
-                        <div class="p-4 text-center">
-                            <i class="fas fa-cogs fa-3x mb-3 text-primary"></i>
-                            <h4 class="mb-3 font-weight-semibold">Governança de TI</h4>
-                            <ul class="list-unstyled text-left mb-4">
-                                <li><i class="fas fa-check text-primary me-2"></i>Alinhamento de TI aos negócios (COBIT,
-                                    ITIL)</li>
-                                <li><i class="fas fa-check text-primary me-2"></i>Gestão de serviços de TI (ITSM)</li>
-                                <li><i class="fas fa-check text-primary me-2"></i>Gestão de projetos (PMO, Agile, Scrum)
-                                </li>
-                                <li><i class="fas fa-check text-primary me-2"></i>Análise de maturidade tecnológica</li>
-                            </ul>
-                            <a href="#" class="btn btn-primary rounded-pill px-4 py-2">Saiba Mais</a>
-                        </div>
-                    </div>
-                </div>
+
                 <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
                     <div class="services-item bg-white rounded shadow-sm">
                         <div class="p-4 text-center">
@@ -501,24 +491,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".7s">
-                    <div class="services-item bg-white rounded shadow-sm">
-                        <div class="p-4 text-center">
-                            <i class="fas fa-chart-bar fa-3x mb-3 text-primary"></i>
-                            <h4 class="mb-3 font-weight-semibold">Dados e Business Intelligence (BI)</h4>
-                            <ul class="list-unstyled text-left mb-4">
-                                <li><i class="fas fa-check text-primary me-2"></i>Big Data e Analytics (Hadoop, Spark)
-                                </li>
-                                <li><i class="fas fa-check text-primary me-2"></i>Data Science</li>
-                                <li><i class="fas fa-check text-primary me-2"></i>Machine Learning</li>
-                                <li><i class="fas fa-check text-primary me-2"></i>Data Governance</li>
-                                <li><i class="fas fa-check text-primary me-2"></i>Business Intelligence (Power BI,
-                                    Tableau)</li>
-                            </ul>
-                            <a href="#" class="btn btn-primary rounded-pill px-4 py-2">Saiba Mais</a>
-                        </div>
-                    </div>
-                </div>
+
                 <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
                     <div class="services-item bg-white rounded shadow-sm">
                         <div class="p-4 text-center">
@@ -535,100 +508,72 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
+                    <div class="services-item bg-white rounded shadow-sm">
+                        <div class="p-4 text-center">
+                            <i class="fas fa-server fa-3x mb-3 text-primary"></i>
+                            <h4 class="mb-3 font-weight-semibold">Monitoramento de infraestrutura e aplicações de
+                                negócios</h4>
+                            <ul class="list-unstyled text-left mb-4">
+                                <li><i class="fas fa-check text-primary me-2"></i>Ferramentas: Zabbix, Grafana,
+                                    Dynatrace</li>
+                                <li><i class="fas fa-check text-primary me-2"></i>Scripts de automação para correções
+                                    proativas</li>
+                                <li><i class="fas fa-check text-primary me-2"></i>Coleta de métricas customizadas</li>
+                                <li><i class="fas fa-check text-primary me-2"></i>Integração ITIL: ServiceDesk, JIRA
+                                </li>
+                                <li><i class="fas fa-check text-primary me-2"></i>Abertura automática de tickets</li>
+                                <li><i class="fas fa-check text-primary me-2"></i>Alertas via Teams ou SMS para NOC/SOC
+                                </li>
+                            </ul>
+                            <a href="#" class="btn btn-primary rounded-pill px-4 py-2">Saiba Mais</a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
     <!-- Services End -->
 
     <!-- Project Start -->
-    <div class="container-fluid project py-5 mb-5" id="project">
+    <!-- Banner/Slide centralizado -->
+    <div class="container-fluid project py-5 mb-5 d-flex justify-content-center align-items-center reveal" id="project"
+        style="min-height: 300px;">
         <div class="container">
-            <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
-                <h5 class="text-primary">Nosso Projeto</h5>
-                <h1>Nossos Projetos Concluídos Recentemente</h1>
-            </div>
-            <div class="row g-5">
-                <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
-                    <div class="project-item">
-                        <div class="project-img">
-                            <img src="img/project-1.jpg" class="img-fluid w-100 rounded" alt="">
-                            <div class="project-content">
-                                <a href="#" class="text-center">
-                                    <h4 class="text-secondary">Sistemas de Gestão</h4>
-                                    <p class="m-0 text-white">Implementação de ERP/CRM</p>
-                                </a>
-                            </div>
+            <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000">
+                <div class="carousel-inner position-relative" style="border-radius: 20px; overflow: hidden;">
+
+                    <!-- Slide 1 -->
+                    <div class="carousel-item active position-relative">
+                        <img src="img/carousel-2.jpg" class="d-block w-100" alt="Banner 1"
+                            style="height: 300px; object-fit: cover;">
+                        <div class="position-absolute top-0 start-0 w-100 h-100"
+                            style="background: linear-gradient(to right, rgba(0, 0, 0, 0.401), rgba(0,0,0,0.1));"></div>
+                        <div class="position-absolute top-50 start-50 translate-middle text-white text-center px-3">
+                            <h2 class="fw-bold display-5" style="color: #26D48C;">NC Sistemas</h2>
+                            <p class="lead">Soluções tecnológicas para impulsionar seu negócio</p>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".5s">
-                    <div class="project-item">
-                        <div class="project-img">
-                            <img src="img/project-2.jpg" class="img-fluid w-100 rounded" alt="">
-                            <div class="project-content">
-                                <a href="#" class="text-center">
-                                    <h4 class="text-secondary">Segurança Cibernética</h4>
-                                    <p class="m-0 text-white">Auditoria de Segurança</p>
-                                </a>
-                            </div>
+
+                    <!-- Slide 2 (opcional) -->
+                    <div class="carousel-item position-relative">
+                        <img src="img/carousel-1.jpg" class="d-block w-100" alt="Banner 2"
+                            style="height: 300px; object-fit: cover;">
+                        <div class="position-absolute top-0 start-0 w-100 h-100"
+                            style="background: linear-gradient(to right, rgba(0,0,0,0.401), rgba(0,0,0,0.1));"></div>
+                        <div class="position-absolute top-50 start-50 translate-middle text-white text-center px-3">
+                            <h2 class="fw-bold display-5" style="color: #26D48C;">Tecnologia que transforma</h2>
+                            <p class="lead">Automação, sistemas sob medida e inovação digital</p>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".7s">
-                    <div class="project-item">
-                        <div class="project-img">
-                            <img src="img/project-3.jpg" class="img-fluid w-100 rounded" alt="">
-                            <div class="project-content">
-                                <a href="#" class="text-center">
-                                    <h4 class="text-secondary">Cloud Computing</h4>
-                                    <p class="m-0 text-white">Migração para a Nuvem</p>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
-                    <div class="project-item">
-                        <div class="project-img">
-                            <img src="img/project-4.jpg" class="img-fluid w-100 rounded" alt="">
-                            <div class="project-content">
-                                <a href="#" class="text-center">
-                                    <h4 class="text-secondary">Desenvolvimento Web</h4>
-                                    <p class="m-0 text-white">Portal Corporativo</p>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".5s">
-                    <div class="project-item">
-                        <div class="project-img">
-                            <img src="img/project-5.jpg" class="img-fluid w-100 rounded" alt="">
-                            <div class="project-content">
-                                <a href="#" class="text-center">
-                                    <h4 class="text-secondary">Aplicações Móveis</h4>
-                                    <p class="m-0 text-white">Desenvolvimento de Apps</p>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".7s">
-                    <div class="project-item">
-                        <div class="project-img">
-                            <img src="img/project-6.jpg" class="img-fluid w-100 rounded" alt="">
-                            <div class="project-content">
-                                <a href="#" class="text-center">
-                                    <h4 class="text-secondary">Business Intelligence</h4>
-                                    <p class="m-0 text-white">Dashboard Analítico</p>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </div>
     </div>
+
+
     <!-- Project End -->
 
     <!-- Nossos Clientes Start -->
@@ -703,25 +648,29 @@
                         </div>
                     </div>
                     <div class="col-lg-6 wow fadeIn" data-wow-delay=".5s">
-                        <div class="p-5 rounded contact-form">
+                        <form action="enviar.php" method="POST" class="p-5 rounded contact-form">
                             <div class="mb-4">
-                                <input type="text" class="form-control border-0 py-3" placeholder="Seu Nome">
+                                <input type="text" name="nome" class="form-control border-0 py-3" placeholder="Seu Nome"
+                                    required>
                             </div>
                             <div class="mb-4">
-                                <input type="email" class="form-control border-0 py-3" placeholder="Seu E-mail">
+                                <input type="email" name="email" class="form-control border-0 py-3"
+                                    placeholder="Seu E-mail" required>
                             </div>
                             <div class="mb-4">
-                                <input type="text" class="form-control border-0 py-3" placeholder="Assunto">
+                                <input type="text" name="assunto" class="form-control border-0 py-3"
+                                    placeholder="Assunto" required>
                             </div>
                             <div class="mb-4">
-                                <textarea class="w-100 form-control border-0 py-3" rows="6" cols="10"
-                                    placeholder="Mensagem"></textarea>
+                                <textarea name="mensagem" class="w-100 form-control border-0 py-3" rows="6" cols="10"
+                                    placeholder="Mensagem" required></textarea>
                             </div>
                             <div class="text-start">
-                                <button class="btn bg-primary text-white py-3 px-5" type="button">Enviar
+                                <button class="btn bg-primary text-white py-3 px-5" type="submit">Enviar
                                     Mensagem</button>
                             </div>
-                        </div>
+                        </form>
+
                     </div>
                 </div>
             </div>
@@ -795,9 +744,26 @@
             <hr class="text-light mt-5 mb-4">
         </div>
     </div>
-    <!-- Footer End -->
-
-    <!-- Back to Top -->
+    <button class="chatbot-toggler" aria-label="Toggle Chatbot">
+        <span class="material-symbols-rounded">mode_comment</span>
+        <span class="material-symbols-outlined">close</span>
+    </button>
+    <div class="chatbot" role="dialog" aria-labelledby="chatbot-header">
+        <header id="chatbot-header">
+            <h2 class="text-white">Chatbot</h2>
+            <button class="close-btn material-symbols-outlined" aria-label="Close Chatbot">close</button>
+        </header>
+        <ul class="chatbox" aria-live="polite">
+            <li class="chat incoming">
+                <span class="material-symbols-outlined">smart_toy</span>
+                <p>Olá 👋 Como posso te ajudar hoje?</p>
+            </li>
+        </ul>
+        <div class="chat-input">
+            <textarea placeholder="Escreva uma mensagem..." spellcheck="false" required></textarea>
+            <button id="send-btn" class="material-symbols-rounded" aria-label="Send Message">send</button>
+        </div>
+    </div>
     <a href="#" class="btn btn-secondary btn-square rounded-circle back-to-top"><i
             class="fa fa-arrow-up text-white"></i></a>
 
@@ -809,6 +775,8 @@
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
+    <script src="js/chatboot.js"></script>
+
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
     <script>
@@ -818,9 +786,10 @@
                 { src: 'img/imgEmpe.png', alt: 'Logo Cliente 1' },
                 { src: 'img/empresa_2.jpg', alt: 'Logo Cliente 2' },
                 { src: 'img/imaga3.png', alt: 'Logo Cliente 3' },
-                { src: 'img/empresa_2.jpg', alt: 'Logo Cliente 4' },
-                { src: 'img/imgEmpe.png', alt: 'Logo Cliente 5' },
-                { src: 'img/imaga3.png', alt: 'Logo Cliente 6' }
+                { src: 'img/image4.png', alt: 'Logo Cliente 4' },
+                { src: 'img/image3.png', alt: 'Logo Cliente 5' },
+                { src: 'img/carro.jpg', alt: 'Logo Cliente 5' },
+
             ];
 
             // Preencher o carrossel com as imagens
