implementação do chatboot

--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
     </button>
     <div class="chatbot" role="dialog" aria-labelledby="chatbot-header">
         <header id="chatbot-header">
-            <h2 class="text-white">Chatbot</h2>
+            <h2 class="text-white">Chat</h2>
             <button class="close-btn material-symbols-outlined" aria-label="Close Chatbot">close</button>
         </header>
         <ul class="chatbox" aria-live="polite">
