--- a/index.html
+++ b/index.html
@@ -538,20 +538,25 @@
 
     <!-- Project Start -->
     <!-- Banner/Slide centralizado -->
-    <div class="container-fluid project py-5 mb-5 d-flex justify-content-center align-items-center reveal" id="project"
-        style="min-height: 300px;">
+    <div class="container-fluid project py-5 mb-5 d-flex justify-content-center align-items-center reveal" id="project">
         <div class="container">
-            <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000">
-                <div class="carousel-inner position-relative" style="border-radius: 20px; overflow: hidden;">
+
+
+            <div id="projectCarousel" class="carousel slide text-center" data-bs-ride="carousel" data-bs-interval="4000">
+                <h5 class="text-primary">NCSISTEMAS</h5>
+                <h1 class="mb-3" style="text-transform: capitalize;">Ajuda alavancar o seu negócio com RPA e Inteligência Artificial</h1>
+                <div class="carousel-inner position-relative" style="border-radius: 20px; overflow: hidden; ">
 
                     <!-- Slide 1 -->
                     <div class="carousel-item active position-relative">
-                        <img src="img/carousel-2.jpg" class="d-block w-100" alt="Banner 1"
-                            style="height: 300px; object-fit: cover;">
+                        <img src="img/RPA2.png" class="d-block w-100" alt="Banner 1"
+                            style="height: 400px; object-fit: fill;">
                         <div class="position-absolute top-0 start-0 w-100 h-100"
-                            style="background: linear-gradient(to right, rgba(0, 0, 0, 0.401), rgba(0,0,0,0.1));"></div>
+                            style="background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0,0,0,0.1));"></div>
                         <div class="position-absolute top-50 start-50 translate-middle text-white text-center px-3">
-                            <h2 class="fw-bold display-5" style="color: #26D48C;">NC Sistemas</h2>
+                            <h2 class="fw-bold display-5"
+                                style="color: #f7fffc; z-index: 1; font-size: 36px; font-weight: 700; line-height: 48px;;">
+                                NC Sistemas</h2>
                             <p class="lead">Soluções tecnológicas para impulsionar seu negócio</p>
                         </div>
                     </div>
@@ -559,11 +564,11 @@
                     <!-- Slide 2 (opcional) -->
                     <div class="carousel-item position-relative">
                         <img src="img/carousel-1.jpg" class="d-block w-100" alt="Banner 2"
-                            style="height: 300px; object-fit: cover;">
+                            style="height: 400px; object-fit: cover;">
                         <div class="position-absolute top-0 start-0 w-100 h-100"
-                            style="background: linear-gradient(to right, rgba(0,0,0,0.401), rgba(0,0,0,0.1));"></div>
+                            style="background: linear-gradient(to right, rgba(0, 0, 0, 0.062), rgba(0,0,0,0.1));"></div>
                         <div class="position-absolute top-50 start-50 translate-middle text-white text-center px-3">
-                            <h2 class="fw-bold display-5" style="color: #26D48C;">Tecnologia que transforma</h2>
+                            <h2 class="fw-bold display-5" style="color: #fff;">Tecnologia que transforma</h2>
                             <p class="lead">Automação, sistemas sob medida e inovação digital</p>
                         </div>
                     </div>
